<resources>
    <string name="app_name">MBTA Times</string>

    <string name="title_activity_criteria_search">Search for Route</string>
    <string name="title_activity_nearby_stations">Nearby Stations</string>
    <string name="title_activity_route_details">Route Details</string>

    <string name="my_routes">My Saved Routes</string>
    <string name="delete_my_routes">Delete Saved Routes?</string>
    <string name="route_added_toast">Route added to your saved routes!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_nearby_stations_error">There are no stations in your vicinity!</string>
    <string name="no_internet_connection">Oops, we can\'t connect to the internet!</string>
    <string name="no_saved_routes">No routes saved yet!</string>
    <string name="device_not_supported">"This device is not supported."</string>

    <string-array name="mode_array">
        <item>Bus</item>
        <item>Subway</item>
        <item>Commuter Rail</item>
    </string-array>

    <string name="call_api_button">Find Times</string>

    <string name="delete_selection">Choose Routes to Delete Fab</string>
    <string name="delete_selected">Delete Selected Fab</string>
    <string name="add_current">Add Current Route To Favorites Fab</string>

    <string name="coming_in">Coming in:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="last_update">Last Update: No update yet!</string>
</resources>
