<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/last_update_text"
                android:text="@string/last_update"
                android:paddingLeft="8dp"
                android:paddingBottom="8dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="italic"
                />

        </LinearLayout>

        <ImageView
            android:src="@drawable/refresh_icon"
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="8dp"/>

    </RelativeLayout>


    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/widget_list_view"
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/no_data_to_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/cardview_light_background"
        android:textColor="@color/primary_text"
        android:text="@string/no_internet_connection"
        />

</LinearLayout>